--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+server.shutdown=graceful
 database=h2
-spring.datasource.url=jdbc:h2:mem:tododb 
+spring.datasource.url=jdbc:h2:mem:tododb
 
 # JPA
 spring.jpa.hibernate.ddl-auto=create-drop
