--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name:  springboot-todo-service
     environment:
       JDK_JAVA_OPTIONS: >
+        -XX:+HeapDumpOnOutOfMemoryError
         -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -XX:+UnlockDiagnosticVMOptions -XX:+DebugNonSafepoints -XX:+PreserveFramePointer 
         -XX:StartFlightRecording:filename=recordings/recording.jfr,settings=myprofile.jfc,maxage=5m,dumponexit=true
         -XX:NativeMemoryTracking=summary -Xms768m -Xmx768m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=70
