--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ database=h2
 spring.datasource.url=jdbc:h2:mem:tododb
 
 # JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
-
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:schema.sql
 
 # Logging
 logging.level.org.springframework=info
